DPX 10-bit render crashes on CUDA/Mac #36127

Closed
opened 2013-07-13 02:33:02 +02:00 by David Andrade · 13 comments

%%%--- Operating System, Graphics card ---
Mac OS X 10.8.4 X86-64 (Native)
NVidia GeForce GTX 680

 Driver: 5
 Total Video Memory: 2047MB
- Blender version with error, and version that worked ---

2.67b (2.67b, 2013-May-29, Blender Foundation)

- Short description of error ---

Rendering a cube using Cycles, GPU Compute, and DPX 10bit will crash Blender

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Run Blender
Set Resolution to 100%
Set Output to DPX, RGB, 10bit
Log is unchecked
Render>Render Image

Included Crashlog as attachment. Check out Thread 11:

Thread 11 Crashed:
0 org.blenderfoundation.blender 0x00000001008c1029 convertRGBAToLogElement.isra.20 + 41
1 org.blenderfoundation.blender 0x00000001008c2a39 logImageSetDataRGBA + 105
2 org.blenderfoundation.blender 0x00000001008be356 imb_save_dpx_cineon.part.0 + 758
3 ??? 0x00000001ffffffff 0 + 8589934591

Thread 11 crashed with X86 Thread State (64-bit):

rax: 0x0000000127440038  rbx: 0x000000012549b038  rcx: 0x0000000000000002  rdx: 0x000000011172af58
rdi: 0x000000012549b038  rsi: 0x0000000127440038  rbp: 0x0000000127440038  rsp: 0x0000000112140270
 r8: 0x0000000000000032   r9: 0x0000000000000001  r10: 0x0000000000001002  r11: 0x0000000000000206
r12: 0x000000011172af58  r13: 0x0000000000000001  r14: 0x0000000000000032  r15: 0x0000000000000002
rip: 0x00000001008c1029  rfl: 0x0000000000010202  cr2: 0x00000001121402cc

Logical CPU: 5%%%

%%%--- Operating System, Graphics card --- Mac OS X 10.8.4 X86-64 (Native) NVidia GeForce GTX 680 ``` Driver: 5 Total Video Memory: 2047MB ``` - Blender version with error, and version that worked --- 2.67b (2.67b, 2013-May-29, Blender Foundation) - Short description of error --- Rendering a cube using Cycles, GPU Compute, and DPX 10bit will crash Blender - Steps for others to reproduce the error (preferably based on attached .blend file) --- Run Blender Set Resolution to 100% Set Output to DPX, RGB, 10bit Log is unchecked Render>Render Image Included Crashlog as attachment. Check out Thread 11: Thread 11 Crashed: 0 org.blenderfoundation.blender 0x00000001008c1029 convertRGBAToLogElement.isra.20 + 41 1 org.blenderfoundation.blender 0x00000001008c2a39 logImageSetDataRGBA + 105 2 org.blenderfoundation.blender 0x00000001008be356 imb_save_dpx_cineon.part.0 + 758 3 ??? 0x00000001ffffffff 0 + 8589934591 Thread 11 crashed with X86 Thread State (64-bit): ``` rax: 0x0000000127440038 rbx: 0x000000012549b038 rcx: 0x0000000000000002 rdx: 0x000000011172af58 rdi: 0x000000012549b038 rsi: 0x0000000127440038 rbp: 0x0000000127440038 rsp: 0x0000000112140270 r8: 0x0000000000000032 r9: 0x0000000000000001 r10: 0x0000000000001002 r11: 0x0000000000000206 r12: 0x000000011172af58 r13: 0x0000000000000001 r14: 0x0000000000000032 r15: 0x0000000000000002 rip: 0x00000001008c1029 rfl: 0x0000000000010202 cr2: 0x00000001121402cc ``` Logical CPU: 5%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Cant redo this bug r58206 on 64bit Linux.
%%%

%%%Cant redo this bug r58206 on 64bit Linux. %%%
Author

%%%Interesting. We use DPX RGB 10bit, not RGBA or any other bit depth.
This crash happens on both of my Macs running 10.8.4 on 2.67b%%%

%%%Interesting. We use DPX RGB 10bit, not RGBA or any other bit depth. This crash happens on both of my Macs running 10.8.4 on 2.67b%%%

%%%@david-20, even though this crash seems obvious/simple to redo, would you mind uploading a blend file setup which crashes?
%%%

%%%@david-20, even though this crash seems obvious/simple to redo, would you mind uploading a blend file setup which crashes? %%%
Author

%%%Ok I think this might work.
Note it /only/ crashes if I click Render>Render Animation%%%

%%%Ok I think this might work. Note it /only/ crashes if I click Render>Render Animation%%%

%%%I can't reproduce this bug on 32 bits Linux with the provided blend file.%%%

%%%I can't reproduce this bug on 32 bits Linux with the provided blend file.%%%
Author

%%%This may be a Mac only bug? Or could it be the Nvidia 680 GT? Note that it is the 2GB version released for older Mac Pros recently, not the 4GB PC version%%%

%%%This may be a Mac only bug? Or could it be the Nvidia 680 GT? Note that it is the 2GB version released for older Mac Pros recently, not the 4GB PC version%%%

%%%Rendered 6 frames from DPXcrash.blend and no crash. (64bit linux),

Tested with -fsanitize=address enabled so it would crash on bad memory read/write.%%%

%%%Rendered 6 frames from DPXcrash.blend and no crash. (64bit linux), Tested with -fsanitize=address enabled so it would crash on bad memory read/write.%%%
Author

%%%Perhaps it is just a OSX Bug?%%%

%%%Perhaps it is just a OSX Bug?%%%

%%%@david-20 Andrade, Its possible, though I think its unlikely to be an OSX-only bug, the source code that runs on OSX and linux are the same here.
More likely IMHO is that some difference in OSX (or something specific with your system) exposes the bug.

@david-20 Andrade, could you check this on another system?
Could someone else using OSX test this?%%%

%%%@david-20 Andrade, Its possible, though I think its unlikely to be an OSX-only bug, the source code that runs on OSX and linux are the same here. More likely IMHO is that some difference in OSX (or something specific with your system) exposes the bug. @david-20 Andrade, could you check this on another system? Could someone else using OSX test this?%%%

%%%I can redo the issue now on OS X with Render Animation.%%%

%%%I can redo the issue now on OS X with Render Animation.%%%

%%%Fix in svn revision 58269, thanks for the report.%%%

%%%Fix in svn revision 58269, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36127
No description provided.